Updated hero section design and made it fully responsive

--- a/index.html
+++ b/index.html
@@ -10,57 +10,63 @@
 </head>
 
 <body>
-  <!-- HERO SECTION -->
-  <section class="hero">
-    <div class="hero-content">
-      <div class="hero-text">
-        <h1>Transform Your Life with <br><span>Expert Coaching</span></h1>
-        <p>Unlock your potential, overcome limiting beliefs, and create the extraordinary life you deserve with personalized guidance from certified life coaches.</p>
+    <!-- HERO SECTION -->
+    <section class="hero">
+        <div class="hero-content">
+            <div class="hero-text">
+                <h1>Transform Your Life with <br><span>Expert Coaching</span></h1>
+                <p>Unlock your potential, overcome limiting beliefs, and create the extraordinary life you deserve with personalized guidance from certified life coaches.</p>
 
-        <div class="hero-buttons">
-          <a href="#" class="btn-primary">Book 60-Min Consultation</a>
-          <a href="#" class="btn-outline">Learn More</a>
-        </div>
-      </div>
+                <div class="hero-buttons">
+                    <a href="#" class="btn btn-primary">Book 60-Min Consultation</a>
+                    <a href="#" class="btn btn-outline">Learn More</a>
+                </div>
+            </div>
 
-      <div class="hero-image">
-        <div class="image-overlay">
-          <h3>Coaching <br> Differently</h3>
-          <p>...your accountability partner</p>
+            <div class="hero-image">
+                <div class="image-overlay">
+                    <h3>Coaching <br> Differently</h3>
+                    <p>...your accountability partner</p>
+                </div>
+            </div>
         </div>
-      </div>
-    </div>
-  </section>
+    </section>
 
   <!-- WHY CHOOSE US SECTION -->
-  <section class="why-choose-us">
-    <div class="container">
-      <h2>Why Choose Our <span>Coaching Program</span></h2>
-      <p class="subtitle">
-        We provide proven strategies and personalized support to help you achieve breakthrough results in every area of your life.
-      </p>
+<section class="why-choose-us">
+  <div class="container">
+    <h2>Why Choose Our <span>Coaching Program</span></h2>
+    <p class="subtitle">
+      We provide proven strategies and personalized support to help you achieve breakthrough results in every area of your life.
+    </p>
 
-      <div class="features">
-        <div class="feature-card">
-          <div class="icon"><i class="fa-solid fa-bullseye"></i></div>
-          <h3>Goal Achievement</h3>
-          <p>Set clear, actionable goals and develop the mindset and strategies needed to achieve them consistently.</p>
+    <div class="features">
+      <div class="feature-card">
+        <div class="icon">
+          <i class="fa-solid fa-bullseye"></i>
         </div>
+        <h3>Goal Achievement</h3>
+        <p>Set clear, actionable goals and develop the mindset and strategies needed to achieve them consistently and effectively.</p>
+      </div>
 
-        <div class="feature-card">
-          <div class="icon"><i class="fa-solid fa-brain"></i></div>
-          <h3>Mindset Transformation</h3>
-          <p>Break through limiting beliefs and develop an empowering mindset that propels you toward success.</p>
+      <div class="feature-card">
+        <div class="icon">
+          <i class="fa-solid fa-brain"></i>
         </div>
+        <h3>Mindset Transformation</h3>
+        <p>Break through limiting beliefs and develop an empowering mindset that propels you toward lasting success and fulfillment.</p>
+      </div>
 
-        <div class="feature-card">
-          <div class="icon"><i class="fa-solid fa-user-group"></i></div>
-          <h3>Personal Growth</h3>
-          <p>Discover your authentic self, build confidence, and create meaningful relationships in all areas of life.</p>
+      <div class="feature-card">
+        <div class="icon">
+          <i class="fa-solid fa-user-group"></i>
         </div>
+        <h3>Personal Growth</h3>
+        <p>Discover your authentic self, build unshakable confidence, and create meaningful relationships in all areas of life.</p>
       </div>
     </div>
-  </section>
+  </div>
+</section>
 
   <!-- OUR BOOKS & RESOURCES SECTION -->
 <section class="coaching-services">
