--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </p>
 
       <div class="hero-buttons">
-        <a href="#" class="btn primary book-consultation-btn">Start Your Growth Journey</a>
+        <a href="#courses" class="btn primary">Start Your Growth Journey</a>
       </div>
     </div>
   </section>
@@ -123,7 +123,7 @@
       <!-- Clarity Call Card -->
       <div class="course-card">
         <div class="course-image">
-          <img src="images/5.png" alt="Clarity Call">
+          <img src="images/book.png" alt="Clarity Call">
         </div>
         <div class="course-content">
           <h3>Clarity Call</h3>
@@ -162,7 +162,7 @@
       <!-- Book 1 - Free Download -->
       <div class="resource-card">
         <div class="resource-image">
-          <img src="images/book.png" alt="The Confidence Code Book">
+          <img src="images/5.png" alt="The Confidence Code Book">
           <span class="price-tag free">Free</span>
         </div>
         <div class="resource-content">
@@ -194,22 +194,10 @@
       <div class="session-options">
           <h3>Session Options</h3>
 
-          <div class="option-card" data-session="consultation">
-              <h4>Free Consultation</h4>
-              <p>30-minute discovery call</p>
-              <span class="price">Free</span>
-          </div>
-
           <div class="option-card" data-session="single">
               <h4>Single Session</h4>
               <p>60-minute coaching session</p>
               <span class="price">Free</span>
-          </div>
-
-          <div class="option-card" data-session="package">
-              <h4>Package Deal</h4>
-              <p>4 sessions (save 20%)</p>
-              <span class="price">$480</span>
           </div>
 
           <div class="expect">
@@ -248,9 +236,7 @@
                     <label>Session Type *</label>
                     <select class="session-type" required>
                         <option value="">Select session type</option>
-                        <option value="consultation">Free Consultation</option>
                         <option value="single">Single Session</option>
-                        <option value="package">Package Deal</option>
                     </select>
                 </div>
             </div>
@@ -347,7 +333,9 @@
   <div class="footer-container">
     <!-- Brand Section -->
     <div class="footer-brand">
-      <h3 class="footer-logo">Coaching Differently</h3>
+      <div class="logo">
+      <img src="images/8.png" alt="Coaching Differently" class="logos-img">
+    </div>
       <p>
         Empowering individuals to unlock their full potential and create meaningful change 
         in their lives through personalized coaching, courses, and resources.
