--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
     </nav>
   </header>
 
+  
+
   <!-- ===== Hero Section ===== -->
   <section class="hero" id="home">
     <div class="hero-content">
@@ -45,68 +47,7 @@
     </div>
   </section>
 
-  <!-- ===== About Section ===== -->
-  <section class="about-section" id="about">
-    <div class="about-container">
-      <!-- Left Text Content -->
-      <div class="about-text">
-        <h2>Your Journey to Transformation Starts Here</h2>
-        <p>
-          At Coaching Differently, we believe that everyone has the potential to create extraordinary
-          change in their lives. Our mission is to guide you through a personalized journey of self-discovery,
-          growth, and achievement.
-        </p>
-        <p>
-          With over 10 years of experience in personal development and coaching, we've helped thousands
-          of individuals break through limiting beliefs, develop confidence, and achieve their most
-          ambitious goals.
-        </p>
-        <!-- Features Grid -->
-        <div class="features-grid">
-          <div class="feature">
-            <div class="icon-box"><i>🧭</i></div>
-            <div class="feature-text">
-              <h4>Personalized Approach</h4>
-              <p>Tailored coaching strategies designed specifically for your unique goals and challenges.</p>
-            </div>
-          </div>
-          <div class="feature">
-            <div class="icon-box"><i>🏆</i></div>
-            <div class="feature-text">
-              <h4>Proven Results</h4>
-              <p>Track record of helping clients achieve breakthrough results in all areas of life.</p>
-            </div>
-          </div>
-          <div class="feature">
-            <div class="icon-box"><i>💚</i></div>
-            <div class="feature-text">
-              <h4>Compassionate Support</h4>
-              <p>A safe, non-judgmental space where you can explore, grow, and transform.</p>
-            </div>
-          </div>
-          <div class="feature">
-            <div class="icon-box"><i>🛠️</i></div>
-            <div class="feature-text">
-              <h4>Practical Tools</h4>
-              <p>Evidence-based techniques and strategies you can apply immediately.</p>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- Right Image Content -->
-      <div class="about-image">
-        <div class="image-wrapper">
-          <img src="coach.jpg" alt="Coaching session" />
-          <div class="stats-badge">
-            <h3>1000+</h3>
-            <p>Lives Transformed</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- ===== Courses Section ===== -->
+    <!-- ===== Courses Section ===== -->
   <section class="courses-section" id="courses">
     <div class="container">
       <h2 class="section-title">Transform Your Life with Our Courses</h2>
@@ -132,7 +73,7 @@
               <li>Actionable next steps</li>
               <li>Follow-up resources</li>
             </ul>
-            <div class="price">Free</div>
+            <div class="price">$100</div>
             <a href="#" class="btn book-consultation-btn">Book Now</a>
           </div>
         </div>
@@ -153,7 +94,7 @@
         <div class="resource-card">
           <div class="resource-image">
             <img src="images/5.png" alt="The Confidence Code Book">
-            <span class="price-tag free">Free</span>
+            <span class="price-tag free">free</span>
           </div>
           <div class="resource-content">
             <h3>The Confidence Code</h3>
@@ -172,6 +113,64 @@
     </div>
   </section>
 
+  <!-- ===== About Section ===== -->
+<section class="about-section" id="about">
+  <div class="about-container">
+    <!-- Left Text Content -->
+    <div class="about-text">
+      <h2>Your Transformation Journey Begins</h2>
+      <p>
+        We believe everyone has the potential for extraordinary change. Our mission is to guide you through a personalized journey of self-discovery and achievement.
+      </p>
+      <p>
+        With over 10 years of experience, we've helped thousands break through limiting beliefs, build confidence, and achieve ambitious goals.
+      </p>
+      <!-- Features Grid -->
+      <div class="features-grid">
+        <div class="feature">
+          <div class="icon-box"><i>🧭</i></div>
+          <div class="feature-text">
+            <h4>Personalized Approach</h4>
+            <p>Strategies tailored to your unique goals and challenges.</p>
+          </div>
+        </div>
+        <div class="feature">
+          <div class="icon-box"><i>🏆</i></div>
+          <div class="feature-text">
+            <h4>Proven Results</h4>
+            <p>Track record of breakthrough results in all life areas.</p>
+          </div>
+        </div>
+        <div class="feature">
+          <div class="icon-box"><i>💚</i></div>
+          <div class="feature-text">
+            <h4>Compassionate Support</h4>
+            <p>A safe, non-judgmental space to explore and grow.</p>
+          </div>
+        </div>
+        <div class="feature">
+          <div class="icon-box"><i>🛠️</i></div>
+          <div class="feature-text">
+            <h4>Practical Tools</h4>
+            <p>Evidence-based techniques you can apply immediately.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Right Image Content -->
+    <div class="about-image">
+      <div class="image-wrapper">
+        <img src="coach.jpg" alt="Coaching session" />
+        <div class="stats-badge">
+          <h3>1000+</h3>
+          <p>Lives Transformed</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+
   <!-- ===== Booking Popup Modal ===== -->
   <div id="bookingModal" class="modal">
     <div class="modal-content">
@@ -185,7 +184,7 @@
           <div class="option-card" data-session="single">
             <h4>Single Session</h4>
             <p>60-minute coaching session</p>
-            <span class="price">Free</span>
+            <span class="price">$100</span>
           </div>
           <div class="expect">
             <h4>What to Expect</h4>
