--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
       <ul class="nav-links">
         <li><a href="#home">Home</a></li>
         <li><a href="#about">About</a></li>
-        <li><a href="#courses">Courses</a></li>
         <li><a href="#resources">Resources</a></li>
         <li><a href="#" class="book-consultation-btn">Book Session</a></li>
       </ul>
@@ -158,8 +157,7 @@
       <div class="image-wrapper">
         <img src="coach.jpg" alt="Coaching session" />
         <div class="stats-badge">
-          <h3>1000+</h3>
-          <p>Lives Transformed</p>
+          <h3>Real Life Impacted</h3>
         </div>
       </div>
     </div>
@@ -356,7 +354,6 @@
           <h4>Quick Links</h4>
           <ul>
             <li><a href="#about">About Us</a></li>
-            <li><a href="#courses">Courses</a></li>
             <li><a href="#resources">Resources</a></li>
             <li><a href="#" class="book-consultation-btn">Book Session</a></li>
           </ul>
@@ -365,7 +362,6 @@
           <h4>Contact</h4>
           <ul>
             <li><i class="far fa-envelope"></i> tessy@coachingdifferently.com</li>
-            <li><i class="fas fa-phone"></i> +65 9469 2243</li>
             <li><i class="fab fa-instagram"></i> @coachingdifferently</li>
           </ul>
         </div>
